# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qpybase"
version = "0.1.0"
description = "`qpybase` is a Python libs "
readme = "README.md"
authors = ["fluentqa-base <hello@fluentqa-base.com>"]
repository = "https://github.com/fluent-qa/fluentqa-pybase.git"
homepage = "https://github.com/fluent-qa/fluentqa-pybase.git"
keywords = ["python-libs"]  #! Update me
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
]
packages = [
    { include = "qpybase", from="src"}
]

[tool.poetry.dependencies]
python=">=3.9,<3.12"
loguru = "^0.7.0"
rich = "^13.3.4"
structlog = "^24.1.0"
inflection = "^0.5.1"
dynaconf = "^3.1.12"
Faker = "^26.0.0"
boltons = "^24.0.0"
pydantic = "^2.7.4"


[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pre-commit = "^3.2.2"
isort = {extras = ["colors"], version = "^5.11.4"}
darglint = "^1.8.1"
pytest-html = "^4.0.0"
coverage = "^7.0.5"
coverage-badge = "^1.1.0"
black = "^24.1.0"
pytest-cov = "^5.0.0"

[tool.black]
# https://github.com/psf/black
target-version = ["py310"]
line-length = 88
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 310
line_length = 88
known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["src", "tests"]
extend_skip = ["setup.py"]

[tool.mypy]
python_version = 3.10
pretty = true
show_traceback = true
color_output = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "qpybase"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
